--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <h1>Escolha um item do cardápio</h1>
         <ul>
-            <li onclick="escolherItem(1)">1 - Suco</li>
-            <li onclick="escolherItem(2)">2 - Água gelada</li>
-            <li onclick="escolherItem(3)">3 - Sorvete</li>
+            <li onclick="escolherItem(1)">1 - Água</li>
+            <li onclick="escolherItem(2)">2 - Prato do dia</li>
+            <li onclick="escolherItem(3)">3 - Coquinha</li>
             <li onclick="escolherItem(4)">4 - Chamar o garçom</li>
         </ul>
 
